# gnome-builder-my-python

./: README.md  meson.build  meson_options.txt
plugins/: meson.build
plugins/python-venv/: gbmp-python-venv-application-addin.c  gbmp-python-venv-application-addin.h  gbmp-python-venv-data.c  gbmp-python-venv-data.h  gbmp-python-venv-runtime-provider.c  gbmp-python-venv-runtime-provider.h  gbmp-python-venv-runtime.c  gbmp-python-venv-runtime.h  gbmp-python-venv-tweaks-addin.c  gbmp-python-venv-tweaks-addin.h  meson.build  org.gnome.builder.PythonVenv.gschema.xml  python-venv-plugin.c  python-venv.gresources.xml  python-venv.plugin  tweaks.ui  tweaks_add_item.ui  tweaks_list_row.ui  tweaks_wait_item.ui
src/: main.c  meson.build
